@@ -29,12 +29,6 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - { py: 2.7, toxenv: py27-epolls, ignore-error: true, os: ubuntu-latest }
-          - { py: 3.5, toxenv: py35-epolls, ignore-error: true, os: ubuntu-20.04 }
-          - { py: 3.6, toxenv: py36-epolls, ignore-error: true, os: ubuntu-20.04 }
-          - { py: 3.7, toxenv: py37-epolls, ignore-error: false, os: ubuntu-latest }
-          - { py: 3.7, toxenv: py37-poll, ignore-error: false, os: ubuntu-latest }
-          - { py: 3.7, toxenv: py37-selects, ignore-error: false, os: ubuntu-latest }
           - { py: 3.8, toxenv: py38-epolls, ignore-error: false, os: ubuntu-latest }
           - { py: 3.8, toxenv: py38-openssl, ignore-error: false, os: ubuntu-latest }
           - { py: 3.8, toxenv: py38-poll, ignore-error: false, os: ubuntu-latest }
@@ -47,7 +41,6 @@ jobs:
           - { py: "3.10", toxenv: py310-poll, ignore-error: false, os: ubuntu-latest }
           - { py: "3.10", toxenv: py310-selects, ignore-error: false, os: ubuntu-latest }
           - { py: "3.10", toxenv: ipv6, ignore-error: false, os: ubuntu-latest }
-          - { py: pypy2.7, toxenv: pypy2-epolls, ignore-error: true, os: ubuntu-20.04 }
           - { py: pypy3.9, toxenv: pypy3-epolls, ignore-error: true, os: ubuntu-20.04 }
 
     steps:
