@@ -20,8 +20,8 @@ envlist =
     pep8
     py38-openssl
     py39-dnspython1
-    py{27,35,36,py2,py3}-epolls
-    py{37,38,39,310}-{selects,poll,epolls}
+    pypy3-epolls
+    py{38,39,310}-{selects,poll,epolls}
 skipsdist = True
 
 [testenv:ipv6]
@@ -63,16 +63,10 @@ setenv =
 deps =
     coverage==4.5.1
     nose3==1.3.8
-    py27-{selects,poll,epolls}: pyopenssl==19.1.0
-    py27: mysqlclient==1.4.6
-    py{27,35}: setuptools==38.5.1
-    py27: subprocess32==3.2.7
     py38-openssl: pyopenssl==20.0.0
-    pypy{2,3}: psycopg2cffi-compat==1.1
-    py{27,35}-{selects,poll,epolls}: pyzmq==19.0.2
-    py{36,37,38,39}-{selects,poll,epolls}: pyzmq==21.0.2
-    py{27,35,36,37}: psycopg2-binary==2.7.7
-    py{35,36,37,38,39,310,311}: mysqlclient==2.0.3
+    pypy3: psycopg2cffi-compat==1.1
+    py{38,39}-{selects,poll,epolls}: pyzmq==21.0.2
+    py{38,39,310,311}: mysqlclient==2.0.3
     py{38,39}: psycopg2-binary==2.8.4
     py{310,311}: psycopg2-binary==2.9.5
     py{310,311}: pyzmq==25.0.0
