@@ -1,3 +1,8 @@
+Unreleased
+==========
+
+* Dropped support for Python 3.7 and earlier.
+
 0.33.3
 ======
 * dnspython 2.3.0 raised AttributeError: module 'dns.rdtypes' has no attribute 'ANY' https://github.com/eventlet/eventlet/issues/781
